<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
	<!ENTITY appname "Fate Sheets">
	<!ENTITY author "Michael Standen">
]>

<resources>
	<string name="app_name">&appname;</string>

	<!-- Menus -->
	<string name="action_import_sheet">Import Fate Sheet</string>
	<string name="action_edit_skills">Edit Skills List</string>
	<string name="action_docs">Rules / Docs</string>
	<string name="action_settings">Settings</string>
	<string name="action_credits">Credits</string>

	<string name="action_sheet_delete">Delete</string>
	<string name="action_sheet_share_json">Export Fate Sheet</string>

	<string name="character_name_default">Hero Protagonist</string>
	<!--Yours Truly-->
	<!--Winston Smith-->
	<!--Emmanuel Goldstein-->
	<!--Henry Wilcox-->
	<!--Rick Deckard-->

	<string name="no_characters_title">Welcome to Fate Sheets!</string>
	<string name="no_characters_text">Please add a character with the button below.</string>

	<string name="toast_character_saved_successful">Character saved</string>
	<string name="toast_character_saved_error">Error when saving character</string>

	<string name="character_delete_dialog">Are you sure you want to delete %1$s?</string>
	<string name="toast_character_deleted_successful">Character %1$s deleted</string>
	<string name="toast_character_deleted_error">Error when deleting character</string>

	<string name="select_sheet_type">Select Sheet Type</string>
	<string name="fate_core">Fate Core</string>
	<string name="fate_accelerated_edition">Fate Accelerated Edition</string>
	<string name="toast_sheet_select_error">Error creating sheet</string>
	<string name="toast_sheet_open_error">Error opening sheet</string>


	<!-- Dice -->
	<string name="toast_rolled">Rolled %1$s (%2$s): %3$s</string>
	<!-- https://fate-srd.com/fate-core/taking-action-dice-ladder#the-ladder -->
	<string-array name="roll_ladder">
		<item>Terrible</item>
		<item>Poor</item>
		<item>Mediocre</item>
		<item>Average</item>
		<item>Fair</item>
		<item>Good</item>
		<item>Great</item>
		<item>Superb</item>
		<item>Fantastic</item>
		<item>Epic</item>
		<item>Legendary</item>
	</string-array>

	<!-- Edit character -->

	<string name="title_activity_character_edit">Edit Character</string>

	<string name="section_title_description">About</string>
	<string name="section_title_aspects">Aspect</string>
	<string name="section_title_skills">Skill</string>
	<string name="section_title_approaches">Appro.</string>
	<string name="section_title_stunts">Stunt</string>
	<string name="section_title_stress">Stress</string>

	<!-- Edit character description -->
	<string name="edit_character_name_hint">Name</string>
	<string name="edit_character_description_hint">Description</string>
	<string name="edit_character_fate_points">Fate Points</string>
	<!-- Edit character aspects -->
	<string name="edit_character_high_concept_hint">High Concept</string>
	<string name="edit_character_trouble_hint">Trouble</string>
	<string name="edit_character_aspect_hint">Aspect</string>
	<string name="edit_character_aspects_title">Aspects</string>
	<!-- Edit character stunts -->
	<string name="edit_character_stunt_hint">Stunt</string>
	<string name="edit_character_stunts_title">Stunts</string>
	<string name="edit_character_extra_hint">Extra</string>
	<string name="edit_character_extras_title">Extras</string>
	<!-- Edit character skills -->
	<string name="edit_character_skill_prompt">Skill</string>
	<string name="edit_character_skills_title">Skills</string>
	<string-array name="core_skills">
		<item></item>
		<item>Athletics</item>
		<item>Burglary</item>
		<item>Contacts</item>
		<item>Crafts</item>
		<item>Deceive</item>
		<item>Drive</item>
		<item>Empathy</item>
		<item>Fight</item>
		<item>Investigate</item>
		<item>Lore</item>
		<item>Notice</item>
		<item>Physique</item>
		<item>Provoke</item>
		<item>Rapport</item>
		<item>Resources</item>
		<item>Shoot</item>
		<item>Stealth</item>
		<item>Will</item>
	</string-array>
	<!-- Edit character approaches -->
	<string name="edit_character_approach_prompt">Approach</string>
	<string name="edit_character_approaches_title">Approaches</string>
	<string-array name="fae_approaches">
		<item></item>
		<item>Careful</item>
		<item>Clever</item>
		<item>Flashy</item>
		<item>Forceful</item>
		<item>Quick</item>
		<item>Sneaky</item>
	</string-array>
	<!-- Edit character stress -->
	<string name="edit_character_consequence_hint">Consequence</string>
	<string name="edit_character_consequence_mild_hint">Mild</string>
	<string name="edit_character_consequence_moderate_hint">Moderate</string>
	<string name="edit_character_consequence_severe_hint">Severe</string>

	<string name="edit_character_stress_title">Stress</string>
	<string name="edit_character_mental_stress_title">Mental Stress</string>
	<string name="edit_character_physical_stress_title">Physical Stress</string>
	<string name="edit_character_consequences_title">Consequences</string>


	<!-- General -->
	<string name="number_zero_hint">0</string>
	<string name="logo_description">Logo</string>
	<string name="share_via">Share via&#8230;</string>


	<!-- Credits -->
	<string name="title_activity_credits">About &appname;</string>
	<string name="credits_creator">by <a href="https://michael.standen.link">&author;</a></string>
	<string name="credits_content1">Fate Sheets is a simple application for managing Fate character
		sheets on your mobile device.
	</string>
	<string name="credits_content2">You can view the source code, log bugs or request features on
		<a href="https://github.com/ScreamingHawk/fate-sheets">Github</a>.
	</string>
	<string name="credits_content3">This application is completely open source; licensed under the
		<a href="https://tldrlegal.com/license/mit-license">MIT license</a>.
	</string>

	<string name="credits_powered_by_fate">This work is based on Fate Core System and Fate
		Accelerated Edition (found at <a href="http://www.faterpg.com/">http://www.faterpg.com/</a>),
		products of Evil Hat Productions, LLC, developed, authored, and edited by Leonard Balsera,
		Brian Engard, Jeremy Keller, Ryan Macklin, Mike Olson, Clark Valentine, Amanda Valentine,
		Fred Hicks, and Rob Donoghue, and licensed for our use under the Creative Commons
		Attribution 3.0 Unported license
		(<a href="http://creativecommons.org/licenses/by/3.0/">http://creativecommons.org/licenses/by/3.0/</a>).
		Fate™ is a trademark of Evil Hat Productions, LLC. The Powered by Fate logo is © Evil Hat
		Productions, LLC and is used with permission.
	</string>

	<!-- Edit Skills -->
	<string name="title_activity_edit_skills">Edit Skills</string>

	<string name="toast_skills_saved_successful">Skills saved</string>
	<string name="toast_skills_saved_error">Error when saving skills</string>

	<string name="reset_skills_list_confirmation_title">Reset Skills to Default</string>
	<string name="reset_skills_list_confirmation_body">Are you sure you would like to reset all
		skills to the default list?
	</string>
</resources>
