<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="link.standen.michael.fatesheets.activity.CoreCharacterEditActivity">
	<item
		android:id="@+id/action_edit_skills"
		android:orderInCategory="100"
		android:name="@string/action_edit_skills"
		android:title="@string/action_edit_skills"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_docs"
		android:orderInCategory="200"
		android:name="@string/action_docs"
		android:title="@string/action_docs"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_credits"
		android:orderInCategory="300"
		android:name="@string/action_credits"
		android:title="@string/action_credits"
		app:showAsAction="never"/>
</menu>
