<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			tools:context="link.standen.michael.fatesheets.fragment.CoreCharacterEditDescriptionFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/section_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<EditText
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/edit_character_name_hint"/>

		<EditText
			android:id="@+id/description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minLines="2"
			android:gravity="bottom"
			android:hint="@string/edit_character_description_hint"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/edit_character_fate_points"
			android:background="@color/colorFaded"
			android:padding="@dimen/section_title_padding"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/fate_points_down"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="-"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_alignParentStart="true"/>

			<TextView
				android:id="@+id/fate_points"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"/>

			<Button
				android:id="@+id/fate_points_up"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="+"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_alignParentEnd="true"/>
		</RelativeLayout>

	</LinearLayout>
</ScrollView>
